I figured out how to space the sides while maintaing the same colour for different sections, although this probably isn't the best practice. I also adjusted the margines for elements and spaced them out.

--- a/index.html
+++ b/index.html
@@ -5,81 +5,82 @@
         <link rel="stylesheet" href="styles.css"> 
     </header>
     <body>
-        <div class="dark flex-container">
-
-        </div>
         <div class="dark">
-            <div>
-                Header Logo                
-            </div>
-            <div>
-                <div>
-                    header link one
+            <div class="side"></div>
+            <div class="body">
+                <div class="headernav">
+                    <div class="item" ID="header_logo">
+                        Header Logo
+                    </div>
+                    <div class="item secondary_text">
+                        <div>
+                            header link one
+                        </div>
+                        <div>
+                            header link two
+                        </div>
+                        <div>
+                            header link three
+                        </div>
+                    </div>
                 </div>
                 <div>
-                    header link two
-                </div>
-                <div>
-                    header link three
-                </div>
-            </div>
-        </div>
-        <div>
-            <div>
-                <div>
-                    This website is awesome
-                </div>
-                <div>
-                    This website has some subtext that goes here under 
-                    the main title. It's a smaller font and the color is 
-                    lower contrast.
-                </div>
-                <div>
-                    sign up 
-                </div>
-            </div>
-            <div>
+                    <div>
+                        <div ID="hero_text">
+                            This website is awesome
+                        </div>
+                        <div class="secondary_text">
+                            This website has some subtext that goes here under 
+                            the main title. It's a smaller font and the color is 
+                            lower contrast.
+                        </div>
+                        <div>
+                            sign up 
+                        </div>
+                    </div>
+                    <div>
 
+                    </div>
+                </div>
             </div>
+            <div class="side"></div>
         </div>
-        <div>
             <div>
+                <div>
 
+                </div>
+                <div>
+                    <div>
+                        this is some subtext under an illustration or
+                        image
+                    </div>
+                    <div>
+                        this is some subtext under an illustration or
+                        image
+                    </div>
+                    <div>
+                        this is some subtext under an illustration or
+                        image
+                    </div>
+                    <div>
+                        this is some subtext under an illustration or
+                        image
+                    </div>
+                </div>
             </div>
             <div>
                 <div>
-                    this is some subtext under an illustration or
-                    image
+                    This is an inspiring quote, or a testimonial from
+                    a customer. Maybe it's just filling up space, or maybe
+                    people will actually read it. Who knows? All I knows
+                    is that it looks nice
                 </div>
                 <div>
-                    this is some subtext under an illustration or
-                    image
-                </div>
-                <div>
-                    this is some subtext under an illustration or
-                    image
-                </div>
-                <div>
-                    this is some subtext under an illustration or
-                    image
+                    -Thor, God of Thunder
                 </div>
             </div>
-        </div>
-        <div>
-            <div>
-                This is an inspiring quote, or a testimonial from
-                a customer. Maybe it's just filling up space, or maybe
-                people will actually read it. Who knows? All I knows
-                is that it looks nice
+            <div class="dark">
+                Copyright <> The Odin Project 2021
             </div>
-            <div>
-                -Thor, God of Thunder
-            </div>
-        </div>
-        <div class="dark">
-            Copyright <> The Odin Project 2021
-        </div>
-
-
     </body>
 </html>
