I added the image and edited the button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div class="headernav">
                     <div>
                         <div ID="hero_text">
                             This website is awesome
@@ -34,12 +34,12 @@
                             the main title. It's a smaller font and the color is 
                             lower contrast.
                         </div>
-                        <div>
+                        <div ID="button" class="secondary_text">
                             sign up 
                         </div>
                     </div>
                     <div>
-
+                        <img ID="main_img" src="https://images.unsplash.com/photo-1541336187922-bffa4ef13d45?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870">
                     </div>
                 </div>
             </div>
