I added the photo border boxes and another quarter of the page, I also figured out how to prevent text from moving dynamically with the page size

--- a/index.html
+++ b/index.html
@@ -45,29 +45,46 @@
             </div>
             <div class="side"></div>
         </div>
-            <div>
-                <div>
-
+        <div class ="white">
+            <div class="side"></div>
+            <div id="infotext">
+                <div id="randomtext">
+                    Some Random information
                 </div>
-                <div>
-                    <div>
-                        this is some subtext under an illustration or
-                        image
+                <div id="imagerow">
+                    <div class="second_image">
+                        <div class="img_border">
+                        </div>
+                        <div class="text_border"> 
+                            this is some subtext under 
+                            an illustration or image 
+                        </div>
                     </div>
-                    <div>
-                        this is some subtext under an illustration or
-                        image
+                    <div class="second_image">
+                        <div class="img_border"></div>
+                        <div class="text_border"> 
+                            this is some subtext under 
+                            an illustration or image 
+                        </div>
                     </div>
-                    <div>
-                        this is some subtext under an illustration or
-                        image
+                    <div class="second_image">
+                        <div class="img_border"></div>
+                        <div class="text_border"> 
+                            this is some subtext under 
+                            an illustration or image 
+                        </div>
                     </div>
-                    <div>
-                        this is some subtext under an illustration or
-                        image
+                    <div class="second_image">
+                        <div class="img_border"></div>
+                        <div class="text_border"> 
+                            this is some subtext under 
+                            an illustration or image 
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="side"></div>
+        </div>
             <div>
                 <div>
                     This is an inspiring quote, or a testimonial from
